; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_adreno_gpu.c_adreno_recover.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_adreno_gpu.c_adreno_recover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msm_gpu = type { %struct.TYPE_2__*, %struct.drm_device* }
%struct.TYPE_2__ = type { i32 (%struct.msm_gpu*)*, i32 (%struct.msm_gpu*)* }
%struct.drm_device = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"gpu hw init failed: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @adreno_recover(%struct.msm_gpu* %0) #0 {
  %2 = alloca %struct.msm_gpu*, align 8
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca i32, align 4
  store %struct.msm_gpu* %0, %struct.msm_gpu** %2, align 8
  %5 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %6 = getelementptr inbounds %struct.msm_gpu, %struct.msm_gpu* %5, i32 0, i32 1
  %7 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  store %struct.drm_device* %7, %struct.drm_device** %3, align 8
  %8 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %9 = getelementptr inbounds %struct.msm_gpu, %struct.msm_gpu* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32 (%struct.msm_gpu*)*, i32 (%struct.msm_gpu*)** %11, align 8
  %13 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %14 = call i32 %12(%struct.msm_gpu* %13)
  %15 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %16 = getelementptr inbounds %struct.msm_gpu, %struct.msm_gpu* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (%struct.msm_gpu*)*, i32 (%struct.msm_gpu*)** %18, align 8
  %20 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %21 = call i32 %19(%struct.msm_gpu* %20)
  %22 = load %struct.msm_gpu*, %struct.msm_gpu** %2, align 8
  %23 = call i32 @msm_gpu_hw_init(%struct.msm_gpu* %22)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %1
  %27 = load %struct.drm_device*, %struct.drm_device** %3, align 8
  %28 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @DRM_DEV_ERROR(i32 %29, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %26, %1
  ret void
}

declare dso_local i32 @msm_gpu_hw_init(%struct.msm_gpu*) #1

declare dso_local i32 @DRM_DEV_ERROR(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
